--- a/module4/index.html
+++ b/module4/index.html
@@ -28,7 +28,13 @@
             <!--The inline style overides the embedded (internal) style sheet-->
             <h1 style="color: yellowgreen; background-color: blue;">Module 4</h1>
 
-            <h2>This is an example of the external style sheet</h2>
+            <h2>This is an example of the external style sheet.</h2>
+
+            <p id="container">This is an example of a paragraph element with the ID of a container.</p>
+
+            <h3 class="accent">This is an accented heading.</h3>
+
+            <p class="accent">This is an accented paragraph.</p>
 
         </main>
 
