--- a/module4/index.html
+++ b/module4/index.html
@@ -32,13 +32,19 @@
 
             <p id="container">This is an example of a paragraph element with the ID of a container.</p>
 
+            <!--This is incorrect. The validator told me so (https://validator.w3.org/nu/#textarea)-->
+            <p id="container">Test</p>
+
             <h3 class="accent">This is an accented heading.</h3>
 
             <p class="accent">This is an accented paragraph.</p>
 
+            <!--This has a different style than the others-->
+            <div id="divelement">This is the <span class="accent">descendant</span> div element.</div>
+
         </main>
 
-        <footer></footer>
+        <footer>This is a color test</footer>
         
         
     </body>
