--- a/module5/index.html
+++ b/module5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home Page</title>
+        <title>Image Types and Sizes</title>
         <meta charset="utf-8">
         
 
