Added New codes

--- a/module7/index.html
+++ b/module7/index.html
@@ -10,7 +10,7 @@
 
     <body>
         
-        <header><img src="media/images/logo.png" alt="Martial Arts Logo"></header>
+        <header><img src="media/images/logo3.png" alt="Martial Arts Logo"></header>
 
        <nav>
         <ul>
