--- a/module8/contact.html
+++ b/module8/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>About</title>
+        <title>Contact</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width= device-width, initial-scale= 1.0">
         <link rel="stylesheet" href="css/style.css">
@@ -14,13 +14,13 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li><br>
-                <li><a href="about.html">About</a></li><br>
-                <li><a href="classes.html">Classes</a></li><br>
-                <li><a href="enroll.html">Enrolment</a></li><br>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="enroll.html">Enroll</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-           </nav>
+        </nav>
 
        <main>
        
