--- a/module8/index.html
+++ b/module8/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>About</title>
+        <title>Home Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width= device-width, initial-scale= 1.0">
         <link rel="stylesheet" href="css/style.css">
@@ -10,14 +10,14 @@
 
     <body>
         
-        <header><img src="media/images/logo8.png" alt="Spata Logo"></header>
+        <header><img src="media/images/logo.png" alt="Spata Logo"></header>
 
        <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="classes.html">Classes</a></li>
-            <li><a href="enroll.html">Onboarding</a></li>
+            <li><a href="enroll.html">Enroll</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
        </nav>
