--- a/module8/about.html
+++ b/module8/about.html
@@ -14,13 +14,13 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li><br>
-                <li><a href="about.html">About</a></li><br>
-                <li><a href="classes.html">Classes</a></li><br>
-                <li><a href="enroll.html">Enrolment</a></li><br>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="enroll.html">Enroll</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-           </nav>
+        </nav>
 
        <main>
        
