--- a/module8/about.html
+++ b/module8/about.html
@@ -30,8 +30,8 @@
 
        <footer>
         <p>Our Location<br>
-            12345 ABC st.<br>
-            Anytown, FL 12345</p>
+            518 Idu Industrial Layoot<br>
+            FCT, Abuja 900106</p>
             <p>Phone Number: <a href="tel:5555551212">(555) 555-1212</a></p>
             <p>Email Address: <a href="mailto:owner@anybusiness.abc">owner@anybusiness.abc</a></p>
        </footer>
