--- a/module8/index.html
+++ b/module8/index.html
@@ -35,15 +35,21 @@
             </div>
 
             <div class="column center">
-                <h2>Welcome!</h2>
-                <p>Its great that you found us. Take the burden off your shoulders and run your projects smoothly.
-                    Explore the App for trained artisans and skilled professionals in the construction industry.
-                </p>
-                <h2>Enjoy!</h2>
-                <p>The website is up and running, it took alot of time to complete, thesre is more to come.</p>
-                <h2>Work in progress</h2>
-                <p>The site has been a work in progress. Good things takes time!</p>
+                <article>
+                    <h2>Welcome!</h2>
+                    <p>Its great that you found us. Take the burden off your shoulders and run your projects smoothly.
+                    Explore the App for trained artisans and skilled professionals in the construction industry.</p>
+                </article>
 
+                <article>
+                    <h2>Enjoy!</h2>
+                    <p>The website is up and running, it took alot of time to complete, thesre is more to come.</p>
+                </article>
+                
+                <article>
+                    <h2>Work in progress</h2>
+                    <p>The site has been a work in progress. Good things takes time!</p>
+                </article>
             </div>
 
             <div class="column right tablet">
@@ -56,8 +62,8 @@
 
        <footer>
         <p>Our Location<br>
-            12345 ABC st.<br>
-            Anytown, FL 12345</p>
+            518 Idu Industrial Layoot<br>
+            FCT, Abuja 900106</p>
             <p>Phone Number: <a href="tel:5555551212">(555) 555-1212</a></p>
             <p>Email Address: <a href="mailto:owner@anybusiness.abc">owner@anybusiness.abc</a></p>
        </footer>
