--- a/module13/examples/index.html
+++ b/module13/examples/index.html
@@ -22,6 +22,8 @@
             <p><a href="globalmethods.html">Global Methods</a></p>
             <p><a href="variables.html">Variables</a></p>
             <p><a href="conditional.html">Conditional Statements</a></p>
+            <p><a href="loops.html">Loops</a></p>
+            <p><a href="operators.html">Operators</a></p>
         </nav>
 
 
